fix showing white at the bottom when using dark mode

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -6,3 +6,7 @@
   max-width: 786px;
   margin: auto;
 }
+
+mat-sidenav-container {
+  min-height: 100vh;
+}
